# variation-normalizer-manuscript

./: .env.shared  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  Download.Dockerfile  LICENSE  Makefile  README.md  compose.yaml  download_cool_seq_tool_files.py  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: clinvar_analysis.ipynb  download_cool_seq_tool_data.ipynb  download_cool_seq_tool_files.py  download_s3_files.ipynb  merged_moa_civic_evidence_analysis.ipynb  utils.py
analysis/civic/: able_to_normalize_queries.csv  civic_analysis.ipynb  civic_evidence_analysis.ipynb  not_supported_variants.csv  should_be_able_to_normalize_genomic_variant_queries.csv  should_be_able_to_normalize_protein_variant_queries.csv  unable_to_normalize_queries.csv
analysis/clinvar/: clinvar_analysis.ipynb  clinvar_variation_analysis.ipynb  install packages.ipynb
analysis/cnvs/: download_data_for_cnv_analysis_data.ipynb  parse_prep_normalize_nch_cnvs.ipynb  prep_clinvar_cnvs.ipynb  query_match_nch_clinvar_cnvs.ipynb
analysis/genie/: civic_genie_analysis.ipynb  genie_analysis.ipynb  genie_search_analysis.ipynb
analysis/merged_moa_civic/: merged_moa_civic_evidence_analysis.ipynb
analysis/moa/: able_to_normalize_queries.csv  moa_analysis.ipynb  moa_assertion_analysis.ipynb  not_supported_variants.csv  should_be_able_to_normalize_queries.csv
analysis/normalization_analysis_output/: civic_accepted_evidence_only_impact_df.csv  civic_both_evidence_cat_impact_df.csv  for_merge_all_features_assertions_df.csv  merged_not_supported_impact_df.csv  (+10 more)
(+67 files in other folders)
