[project]
name = "variation-normalizer-manuscript"
version = "2.0.0"
description = "Analysis notebooks used in the The Clinical Genomic Variation Landscape manuscript"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cool-seq-tool==0.14.2",
    "variation-normalizer==0.15.0",
    "civicpy==5.0.0",
    "python-dotenv",
    "ipykernel",
    "jupyter",
    "plotly",
    "pandas",
    "nbformat",
    "requests",
    "matplotlib",
    "ga4gh.vrs==2.1.3",
    "scipy",
    "ndjson",
    "numpy",
    "kaleido",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.1",
    "pre-commit==4.2.0",
]

[tool.ruff]
extend-include = ["*.ipynb"]
